components/workspace/prop/PropVotePanel.module.css
.votePanelContainer {
	margin-top: 2em;

	background-color: #1D1D1D;

	border: 0.5px solid rgba(255, 255, 255, 0.25);
	border-radius: 5px;

	padding-left: 2em;
	padding-right: 2em;

	padding-bottom: 1.5em;
	padding-top: 1.5em;

	display: flex;

	flex-flow: column nowrap;
	justify-content: center;
	align-items: stretch;
}

.votePanelSlider {
	padding-left: 1em;
	padding-right: 1em;
}

.votePanelSlider span {
	color: white;
	font-weight: bold;
}

.votePanelSlider .sliderThumb.MuiSlider-thumb {
	background-color: #5D5FEF;
}

.votePanelTextLine {
	display: flex;

	flex-flow: row nowrap;
	justify-content: space-between;
	align-items: center;
}

.panelHeader {
	display: flex;

	flex-flow: row nowrap;
	justify-content: flex-start;
	align-items: baseline;
}

.panelHeader>*:first-child {
	margin-right: 0.5em;
	cursor: pointer;

	transition: 0.3s;
}

.panelHeader h2 {
	margin: 0;
}

.contentContainer {
	height: 0;
	opacity: 0;

	transition: 0.3s;

	overflow-x: visible;
	overflow-y: clip;
}

.contentContainer.expanded {
	opacity: 1;
	height: auto;
	max-height: 100%;
}

.fullWidthInput {
	width: 100%;
}

.multiChildItem {
	display: flex;

	flex-flow: row nowrap;

	justify-content: flex-start;
	align-items: stretch;
}

.multiChildItem>*:not(:last-child) {
	margin-right: 2em;
}

.datePicker {
	color: black;
}

.intervalPicker {
	display: flex;

	flex-flow: row nowrap;

	justify-content: flex-start;
	align-items: flex-end;
}

.intervalPicker>*:not(:last-child) {
	margin-right: 0.5em;
}

.votePanelItem {
	display: flex;

	flex-flow: column nowrap;

	justify-content: space-between;
	align-items: stretch;

	margin-top: 0.5em;
}

.submitButton {
	margin-top: 2em;

	border-radius: 5px;
}

.invisibleBody {
	height: 0;
	opacity: 0;

	transition: 0.3s;
}

.visibleBody {
	height: auto;
	opacity: 1;

	transition: 0.3s;
}

.confirmationDialogContainer {
	display: flex;

	flex-flow: column nowrap;

	justify-content: center;
	align-items: center;

	opacity: 0;
	height: 0;

	transition: 0.3s;
}

.confirmationDialogContainer .submitButton {
	align-self: stretch;
}

.confirmationDialogContainer.visible {
	opacity: 1;
	height: auto;

	transition: 0.3s;
}

.confirmationDialogContainer svg {
	font-size: 8rem;
}

.confirmationDialogContainer>*:not(:last-child) {
	padding: 0;
	margin: 0;

	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
}

.combinedInput {
	display: flex;

	flex-flow: row nowrap;

	justify-content: flex-start;
	align-items: flex-end;
}

.combinedInput>*:last-child {
	margin-left: 0.5em;
}

.voteChoices {
	display: flex;

	flex-flow: row nowrap;

	justify-content: center;
	align-items: center;
}

.voteChoices>* {
	flex-grow: 1;

	margin-top: 0.25em;
}

.yes {
	margin-left: 0.5em;
}

.no {
	margin-right: 0.5em;

	background-color: #5A153A !important;
}

.no:hover {
	background-color: #45102c !important;
}

